--- a/index.html
+++ b/index.html
@@ -2,24 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Personal Webpage</title>
+    <title>Feedback Form</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f9f9f9;
-            color: #333;
+            background: #f4f6f8;
+            padding: 40px;
         }
-        img {
-            max-width: 200px;
-            border-radius: 50%;
+
+        .container {
+            max-width: 500px;
+            margin: auto;
+            background: #ffffff;
+            padding: 30px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 8px;
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 12px;
+            margin-top: 8px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            resize: vertical;
+        }
+
+        button {
+            background-color: #007BFF;
+            color: white;
+            padding: 12px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        .success-message {
+            display: none;
+            color: green;
+            text-align: center;
+            margin-top: 15px;
         }
     </style>
 </head>
 <body>
-    <h1>Hello, I'm Jane Doe!</h1>
-    <p>Welcome to my personal webpage. I'm a web developer who loves creating clean and functional websites.</p>
-    <img src="https://via.placeholder.com/200" alt="Profile Picture">
-    <p>Check out my <a href="https://github.com">GitHub</a> for more projects.</p>
+
+<div class="container">
+    <h2>Feedback Form</h2>
+    <form id="feedbackForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" required>
+
+        <label for="message">Feedback:</label>
+        <textarea id="message" rows="5" required></textarea>
+
+        <button type="submit">Submit Feedback</button>
+        <div class="success-message" id="successMessage">
+            Thank you! Your feedback has been received.
+        </div>
+    </form>
+</div>
+
+<script>
+    const form = document.getElementById('feedbackForm');
+    const successMessage = document.getElementById('successMessage');
+
+    form.addEventListener('submit', function(event) {
+        event.preventDefault(); // Prevent form from refreshing page
+        // Normally you'd send data to a server here
+        successMessage.style.display = 'block';
+        form.reset(); // Clear the form
+    });
+</script>
+
 </body>
 </html>
